name: MissingH
version: 1.3.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2004-2014 John Goerzen
maintainer: John Goerzen <jgoerzen@complete.org>
stability: Beta
homepage: http://software.complete.org/missingh
synopsis: Large utility library
description:
    MissingH is a library of all sorts of utility functions for
    Haskell programmers.  It is written in pure Haskell and thus should
    be extremely portable and easy to use.
category: Unclassified
author: John Goerzen
extra-source-files:
    LICENSE
    announcements/0.10.0.tx
    announcements/0.8.0.tx
    announcements/0.9.0.tx
    testsrc/gzfiles/empty.gz
    testsrc/gzfiles/t1.gz
    testsrc/gzfiles/t1bad.gz
    testsrc/gzfiles/t2.gz
    testsrc/gzfiles/zeros.gz
    testsrc/mime.types.tes
    3rd-party-licenses/BSD
    3rd-party-licenses/LGPL-2.1
    Makefile
    TODO
    examples/simplegrep.hs
    examples/test2.hs
    examples/test3.hs
    pending/Gopher.hs
    pending/Maildir.disabled
    pending/Tar.newhs
    pending/Tar/HeaderParser.newhs
    tolgpl
    winbuild.ba
    wintest.ba

flag splitbase
    description:
        Choose the new smaller, split-up base package.

library

    if flag(splitbase)
        build-depends:
            base >=4,
            base <5,
            directory -any,
            random -any,
            process -any,
            old-time -any,
            containers -any,
            old-locale -any,
            array -any,
            time -any
    else
        build-depends:
            base <3

    if !os(windows)
        build-depends:
            unix -any
    exposed-modules:
        Data.String.Utils
        System.IO.Utils
        System.IO.Binary
        Data.List.Utils
        System.Daemon
        Text.ParserCombinators.Parsec.Utils
        Network.Email.Mailbox
        Control.Concurrent.Thread.Utils
        Network.Email.Sendmail
        Data.CSV
        System.Cmd.Utils
        Data.BinPacking
        Data.Progress.Tracker
        Data.Progress.Meter
        Data.Quantity
        Data.Map.Utils
        System.Path
        System.Path.NameManip
        System.Path.WildMatch
        System.Path.Glob
        System.Time.Utils
        System.Time.ParseDate
        Network.Utils
        Network.SocketServer
        Data.Either.Utils
        Data.Maybe.Utils
        Data.Tuple.Utils
        Data.Bits.Utils
        Data.Hash.CRC32.Posix
        Data.Hash.CRC32.GZip
        Data.Hash.MD5
        Data.Hash.MD5.Zord64_HARD
        Data.Compression.Inflate
        System.FileArchive.GZip
        System.IO.HVFS
        System.IO.HVFS.Combinators
        System.IO.HVFS.InstanceHelpers
        System.IO.HVFS.Utils
        System.IO.HVIO
        System.IO.StatCompa
        System.IO.WindowsCompa
        System.IO.PlafCompa
        System.Posix.Consts
        System.Debian
        System.Debian.ControlParser
        Data.MIME.Types
        System.Console.GetOpt.Utils
    build-depends:
        network -any,
        parsec -any,
        base -any,
        mtl -any,
        HUnit -any,
        regex-compat -any,
        filepath -any,
        hslogger -any
    extensions: ExistentialQuantification OverlappingInstances
                UndecidableInstances CPP Rank2Types MultiParamTypeClasses
                FlexibleInstances FlexibleContexts ScopedTypeVariables
    hs-source-dirs: src

test-suite runtests

    if flag(splitbase)
        build-depends:
            base >=4,
            base <5,
            directory -any,
            random -any,
            process -any,
            old-time -any,
            containers -any,
            old-locale -any,
            array -any,
            time -any
    else
        build-depends:
            base <3

    if !os(windows)
        build-depends:
            unix -any
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        network -any,
        parsec -any,
        base -any,
        mtl -any,
        HUnit -any,
        regex-compat -any,
        errorcall-eq-instance -any,
        filepath -any,
        hslogger -any,
        testpack -any,
        QuickCheck -any,
        HUnit -any
    extensions: ExistentialQuantification OverlappingInstances
                UndecidableInstances CPP Rank2Types MultiParamTypeClasses
                FlexibleInstances FlexibleContexts ScopedTypeVariables
    hs-source-dirs: testsrc . src
    other-modules:
        Bitstes
        CRC32GZIPtes
        CRC32POSIXtes
        Eithertes
        GZiptes
        Globtes
        HVFStes
        HVIOtes
        IOtes
        Listtes
        MIMETypestes
        Maptes
        Pathtes
        ProgressTrackertes
        Str.CSVtes
        Strtes
        Tests
        Timetes
        WildMatchtes
